make the caching banner float

--- a/multiplayer-spa.html
+++ b/multiplayer-spa.html
@@ -1016,16 +1016,22 @@
         border-radius: 16px;
         padding: 14px 18px;
         color: #ffffff;
-        max-width: 420px;
-        margin: 0 auto 24px;
+        position: fixed;
+        top: 24px;
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: min(420px, calc(100% - 32px));
+        margin: 0;
         box-shadow: 0 18px 35px rgba(8, 12, 26, 0.4);
         transition: opacity 0.4s ease, transform 0.4s ease;
+        z-index: 1200;
+        pointer-events: none;
       }
 
       .preload-banner[data-state='hidden'] {
         opacity: 0;
         pointer-events: none;
-        transform: translateY(-12px);
+        transform: translate(-50%, -20px);
       }
 
       .preload-banner[data-state='done'] .preload-progress-fill {
