--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
       </div>
     </div>
 
+    <script type="module">
+      import { initAssetPreloader } from './scripts/preload-banner.js';
+      initAssetPreloader();
+    </script>
     <script>
       // Add subtle floating animation to pellets
       const pellets = document.querySelectorAll('.pellet');
