add import to improve the caching in `home`

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
       </div>
     </div>
 
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.180.0/build/three.module.js",
+          "three/examples/jsm/loaders/GLTFLoader.js": "https://unpkg.com/three@0.180.0/examples/jsm/loaders/GLTFLoader.js"
+        }
+      }
+    </script>
     <script type="module">
       import { initAssetPreloader } from './scripts/preload-banner.js';
       initAssetPreloader();
